# split_loaf

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  linux_test.c  main.c  main.cpp
.github/workflows/: build.yml  build_linux.yml
src/app/: main.cpp
src/core/: Backend.h  Backend.hpp  Platform.cpp  Platform.hpp
src/lin/: linux_test.c  linux_test.h
src/linux/: LinuxApp.h  LinuxKeyLogger.cpp  LinuxKeyLogger.h  key_logger.c  key_logger.cpp  linux_test.c  linux_test.cpp
src/res/: resource.rc
src/win/: WinApp.cpp  WinApp.h  WinApp.hpp  WinBackend.cpp  WinBackend.h  WinBackend.hpp  WinHooks.cpp  WinHooks.h  WinSettings.cpp  WinSettings.h  WinSettings.hpp  WinTray.cpp  WinTray.h  WinTray.hpp
